force-app/main/default/objects/Emergency_Incident__c/Emergency_Incident__c.object-meta.xml
<CustomObject>
    <description>Emergency incident detected or entered by a coordinator.</description>
    <label>Emergency Incident</label>
    <nameField>
        <label>Incident Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Emergency Incidents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>