force-app/main/default/objects/Emergency_Incident__c/fields/Detected_Date__c.field-meta.xml
<CustomField>
    <fullName>Detected_Date__c</fullName>
    <label>Detected Date</label>
    <type>DateTime</type>
    <description>Timestamp the disaster was first reported by the source feed (e.g. ReliefWeb date.created).</description>
</CustomField>