force-app/main/default/objects/Emergency_Incident__c/fields/Disaster_Type__c.field-meta.xml
<CustomField>
    <fullName>Disaster_Type__c</fullName>
    <label>Disaster Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>