force-app/main/default/objects/Emergency_Incident__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
    <description>Source system identifier (e.g. ReliefWeb disaster id) used to prevent duplicate incident ingestion.</description>
</CustomField>