force-app/main/default/objects/Emergency_Incident__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <label>Latitude</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>