force-app/main/default/objects/Emergency_Incident__c/fields/Map_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Map_Image_URL__c</fullName>
    <label>Map Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>