force-app/main/default/objects/Emergency_Incident__c/fields/Population_Affected__c.field-meta.xml
<CustomField>
    <fullName>Population_Affected__c</fullName>
    <label>Population Affected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>