force-app/main/default/objects/Emergency_Incident__c/fields/Profile_Overview__c.field-meta.xml
<CustomField>
    <fullName>Profile_Overview__c</fullName>
    <label>Profile Overview</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>Narrative overview sent to the RESCUE Coordinator Agent for situation understanding.</description>
</CustomField>