force-app/main/default/objects/Emergency_Incident__c/fields/ReliefWeb_Status__c.field-meta.xml
<CustomField>
    <fullName>ReliefWeb_Status__c</fullName>
    <label>ReliefWeb Status</label>
    <length>40</length>
    <type>Text</type>
    <description>Raw "status" value from the ReliefWeb disasters list API response (e.g. alert, ongoing, current, past). Not to be confused with Status__c, which tracks the RESCUE pipeline stage.</description>
</CustomField>