force-app/main/default/objects/Emergency_Incident__c/fields/Situation_Summary__c.field-meta.xml
<CustomField>
    <fullName>Situation_Summary__c</fullName>
    <label>Situation Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>