force-app/main/default/objects/Emergency_Incident__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <length>60</length>
    <type>Text</type>
    <description>Where this incident was ingested from, e.g. ReliefWeb.</description>
</CustomField>