force-app/main/default/objects/Emergency_Incident__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Situation_Summary__c</columns>
    <columns>Severity__c</columns>
    <columns>Population_Affected__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Location__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>